# dcap-qvl

./: .gitignore  Cargo.toml  IMPLEMENTATION_PARITY.md  LICENSE  Makefile  README.md  compare-rust-js.sh  test_suite.sh  verify_sample.js
.github/: PUBLISHING.md  dependabot.yml
.github/workflows/: android-aar.yml  ios-release.yml  publish-npm.yml  publish-pypi.yml  python-test.yml  python-wheels.yml  release.yml  rust.yml  test-build.yml  test-python-versions.yml  test-suite.yml
benchmarks/go-ffi/: after-callback_meta.txt  after-callback_parse.json  after-callback_verify.json  before-callback_meta.txt  before-callback_parse.json  before-callback_verify.json  compare_before_after.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
dcap-qvl-js/: .eslintrc.cjs  .gitignore  QUICK_START.md  README.md  TESTING_GUIDE.md  debug.ts  package-lock.json  package.json  test_case.js  tsconfig.json  tsup.config.ts  vitest.config.ts
dcap-qvl-js/sample/: quote-from-tappd.hex  sgx_quote_collateral.json  tdx-quote.hex
dcap-qvl-js/src/: certificate.ts  collateral.js  collateral.ts  constants.js  constants.ts  crypto-compat.js  crypto.ts  index.d.ts  index.js  index.ts  intel.js  node.ts  oids.js  parser.ts  qe_identity.js  quote.js  tcb_info.js  types.ts  utils.js  utils.ts  verify.js  verify.ts  web.ts
dcap-qvl-js/test/: compare-outputs.ts  crl-validation.test.ts  exception-cases-binary-mod.test.ts  exception-cases.test.ts  parser.test.ts  quoteModifier.ts  rust-api-comparison.test.ts  verify.test.ts
dcap-qvl-js/tests/: get-ca.test.js
dcap-qvl-mobile/: .gitignore  Cargo.toml  README.md  RELEASING.md  SONATYPE_ONBOARDING.md  uniffi.toml
dcap-qvl-mobile/android/: README.md  build.gradle.kts  consumer-rules.pro  gradle.properties  settings.gradle.kts
dcap-qvl-mobile/android/src/androidTest/kotlin/com/phala/dcapqvl/: DcapQvlInstrumentedTest.kt
dcap-qvl-mobile/android/src/test/kotlin/com/phala/dcapqvl/: DcapQvlTest.kt
dcap-qvl-mobile/android/src/test/kotlin/network/phala/dcapqvl/: DcapQvlTest.kt
dcap-qvl-mobile/android/src/test/resources/: sgx_quote  sgx_quote_collateral.json  tdx_quote  tdx_quote_collateral.json
dcap-qvl-mobile/ios/: Package.swift  README.md
dcap-qvl-mobile/ios/Tests/DcapQvlTests/: DcapQvlTests.swift
dcap-qvl-mobile/ios/Tests/DcapQvlTests/Resources/: sgx_quote  sgx_quote_collateral.json  tdx_quote  tdx_quote_collateral.json
dcap-qvl-mobile/scripts/: build_android.sh  build_ios.sh
dcap-qvl-mobile/src/: errors.rs  lib.rs  types.rs
dcap-qvl-mobile/tests/: verify_sample.rs
docs/: policy.md
examples/asn1-der-backend/: Cargo.toml  README.md
examples/asn1-der-backend/examples/: verify_sample.rs
examples/asn1-der-backend/src/: lib.rs
examples/asn1-der-backend/tests/: conformance.rs
golang-bindings/: README.md  collateral.go  dcap_qvl.h  dcap_test.go  ffi.go  go.mod  integration_test.go  pck.go  types.go
golang-bindings/cmd/ffi-bench/: main.go
golang-bindings/cmd/install-lib/: main.go  main_test.go
python-bindings/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_case.py  verify_sample.py
python-bindings/docs/: BUILDING.md  PYTHON_TESTING.md  README_Python.md
python-bindings/examples/: async_example.py  basic_test.py  python_example.py  test_abi3_compatibility.py  test_with_samples_async.py
python-bindings/python/dcap_qvl/: __init__.py  __init__.pyi  _dcap_qvl.pyi  enums.py  llm.txt
python-bindings/scripts/: build_wheels.py  build_wheels.sh  test_cross_versions.sh  test_installation.py  test_python_versions.py  test_python_versions.sh
python-bindings/tests/: __init__.py  _async_utils.py  test_all_async_functions.py  test_async_bindings.py  test_async_collateral.py  test_collateral_api.py  test_cross_versions.sh  test_installation.py  test_python_bindings.py  test_python_versions.sh  test_quote_parsing_samples.py  test_with_samples.py
sample/: sgx_quote_collateral.json  tdx_quote_collateral.json  tdx_quote_outdated  tdx_quote_outdated_collateral.json
scripts/: benchmark_go_ffi.sh  compare_ca_string_leak.sh  test_suite.sh
src/: collateral.rs  config.rs  configs.rs  constants.rs  cosmwasm_backend.rs  crypto.rs  ffi.rs  http.rs  intel.rs  lib.rs  oids.rs  policy.rs  python.rs  qe_identity.rs  quote.rs  signature.rs  sp1_backend.rs  tcb_info.rs  trust-chain.txt  utils.rs  verify.rs  x509.rs
src/policy/: mod.rs  rego.rs  simple.rs
tests/: config_conformance.rs  encode_quote.rs  exception_cases.rs  exception_cases_realistic.rs  exception_cases_with_binary_mod.rs  generate_test_certs.sh  quote_modifier.rs  quote_parsing.rs  test_case.js  test_suite.sh  test_web.sh  verify_quote.js  verify_quote.rs  verify_tcb_override.rs
tests/esbuild/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
tests/esbuild/src/: global.d.ts  index.html  main.ts
tests/js/: .gitignore  README.md  TEST_WEB.md  get_collateral_node.js  get_collateral_web.html  get_collateral_web.js  index.html  verify_quote_node.js  verify_quote_rego_node.js  verify_quote_web.js  verify_quote_web_test.html  verify_quote_web_test.js
tests/near/: README.md
tests/near/contracts/gas-test/: Cargo.toml
tests/near/contracts/gas-test/src/: lib.rs
tests/near/contracts/gas-test/tests/: constants.rs  test_gas_consumption.rs  utils.rs
tests/near/contracts/gas-test/tests/quote/: quote_collateral.json  quote_hex.txt
tests/snapshots/: verify_quote__could_parse_sgx_quote-2.snap  verify_quote__could_parse_sgx_quote.snap  verify_quote__could_parse_tdx_quote-2.snap  verify_quote__could_parse_tdx_quote-3.snap  verify_quote__could_parse_tdx_quote.snap
tests/vite/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
tests/vite/src/: main.ts
