[package]
name = "dcap-qvl"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "This crate implements the quote verification logic for DCAP (Data Center Attestation Primitives) in pure Rust."
authors = ["Kevin Wang <wy721@qq.com>"]
repository = "https://github.com/Phala-Network/dcap-qvl"

[dependencies]
borsh = { version = "1.6.1", default-features = false, features = [
    "derive",
], optional = true }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
scale = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11.6", default-features = false, features = [
    "derive",
] }
chrono = { version = "0.4.44", default-features = false, features = [
    "alloc",
    "serde",
] }
const-oid = { version = "0.9.6", default-features = false }
x509-cert = { version = "0.2.5", default-features = false, optional = true }
byteorder = { version = "1.5.0", default-features = false }
pem = { version = "3", default-features = false }
asn1_der = { version = "0.7", default-features = false, features = [
    "native_types",
] }
der = { version = "0.7.10", default-features = false, features = [
    "alloc",
], optional = true }

log = { version = "0.4.29", default-features = false }

anyhow = { version = "1.0.102", default-features = false }

reqwest = { version = "0.13.2", optional = true, default-features = false, features = [
    "rustls",
    "hickory-dns",
] }
urlencoding = { version = "2", optional = true }
serde_json = { version = "1.0.149", optional = true, features = [
    "preserve_order",
] }
tracing = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
getrandom = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.118", optional = true }
wasm-bindgen-futures = { version = "0.4.68" }
serde_bytes = { package = "serde-human-bytes", version = "0.1" }
serde-json-core = { version = "0.6", default-features = false, optional = true }

# Python bindings
pyo3 = { version = "0.25", optional = true, features = [
    "extension-module",
    "abi3-py38",
    "generate-import-lib",
] }
pyo3-async-runtimes = { version = "0.25", optional = true, features = [
    "tokio-runtime",
] }
tokio = { version = "1.52.1", optional = true, features = ["full"] }
derive_more = { version = "2.1.1", features = ["display"] }

rustls-pki-types = { version = "1.14", default-features = false }

# Crypto backends (choose one via features: "ring" or "rustcrypto")
ring = { version = "0.17", default-features = false, features = ["alloc"], optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"], optional = true }
signature = { version = "2.2", default-features = false, optional = true }

dcap-qvl-webpki = { version = "=0.103.4", features = ["alloc"] }


[dev-dependencies]
hex-literal = "1.1.0"
insta = "1.47.2"
reqwest = "0.13.2"
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }

[lib]
name = "dcap_qvl"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["std", "report", "ring", "rustcrypto", "default-x509"]
std = [
    "serde/std",
    "scale/std",
    "scale-info/std",
    "const-oid/std",
    "pem/std",
    "asn1_der/std",
    "der?/std",
    "serde_json",
    "urlencoding",
    "borsh?/std",
]
borsh = ["dep:borsh"]
borsh_schema = ["borsh", "borsh/unstable__schema"]
# Audited in-tree X.509 / signature backends (`x509::X509CertBackend`,
# `signature::DerSigEncoder`) and the configs that bundle them
# (`configs::RingConfig` / `RustCryptoConfig` / `DefaultConfig`), plus the
# non-generic `verify` / `intel::*` shims that pin `DefaultConfig`.
#
# Disabling this drops ~37 KiB on `wasm32-unknown-unknown` (`lto="fat"` +
# `wasm-opt -O`) by removing `der` and `x509-cert`. Without it, callers
# must supply their own `Config` impl and use the `_with::<C>` entry
# points (see `examples/asn1-der-backend/`).
default-x509 = ["dep:der", "dep:x509-cert"]
# `report` (PCCS client + collateral fetch) parses CRL distribution
# points with `x509-cert`, so it pulls in the audited backend bundle too.
report = ["std", "tracing", "futures", "reqwest", "default-x509"]
js = ["getrandom/js", "serde-wasm-bindgen", "wasm-bindgen"]
python = ["pyo3", "pyo3-async-runtimes", "tokio", "std", "report", "ring"]
# The `go` FFI surface concretizes on `DefaultConfig`, so it pulls in the
# audited backend bundle.
go = ["std", "ring", "serde_json", "default-x509"]
ring = ["dep:ring", "dcap-qvl-webpki/ring", "_anycrypto"]
rustcrypto = ["dep:sha2", "dep:p256", "dep:signature", "dcap-qvl-webpki/rustcrypto", "_anycrypto"]
# Opt-in: parse TCB Info / QE Identity JSON via `serde-json-core` instead of
# `serde_json`. Smaller footprint on size-constrained targets (e.g.
# `wasm32-unknown-unknown`, `no_std` / embedded, TEE enclaves) at the cost
# of `serde-json-core`'s stricter parser (no `deserialize_any`, no
# `deserialize_bytes`).
json-core = ["dep:serde-json-core"]
_anycrypto = []
contract = ["getrandom"]

# Enables the dangerous_verify_with_tcb_override() function, allowing TCB checks to be overridden
# with custom collateral. Normal verify() is not affected.
danger-allow-tcb-override = []

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "symbols"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
