[package]
name = "dcap-qvl-cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface for Intel SGX DCAP Quote Verification Library"
license = "Apache-2.0"
repository = "https://github.com/Phala-Network/dcap-qvl"
keywords = ["sgx", "dcap", "attestation", "quote", "verification"]

[[bin]]
name = "dcap-qvl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
dcap-qvl = { version = "0.2.0", path = "../" }
hex = "0.4.3"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
