[package]
name = "dcap-qvl-mobile"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "UniFFI-powered Kotlin and Swift bindings for dcap-qvl"
repository = "https://github.com/Phala-Network/dcap-qvl"
publish = false

[lib]
name = "dcap_qvl_mobile"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
dcap-qvl = { path = "..", default-features = false, features = ["std", "ring", "default-x509"] }
uniffi = { version = "0.28", features = ["cli"] }
thiserror = "1"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
scale = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
# Don't strip / LTO the cdylib before running uniffi-bindgen — bindgen
# reads UniFFI metadata blobs from `.rodata`. Strip + LTO at the packaging
# step (AAR / XCFramework) after the foreign-language sources are generated.
strip = false
lto = false

[lints.clippy]
# Loosen the parent crate's strict lints for the binding shim — it's mostly
# value translation, where the deny-by-default lints fight straightforward code.
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
